@@ -1,3 +1,9 @@
+2008-07-25  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/datafile.c (plot_ticlabel_using): If tic labels will be generated
+	from an expression then force evaluation of all column contents.
+	Otherwise references to column() return uninitialized garbage. Bugfix.
+
 2008-07-24  Jozef Vesely  <vesely@gjh.sk>
 
 	* src/datafile.c src/datafile.h:  Binary data types for 64-bit ints
